--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-﻿absl-py==1.3.0
+absl-py==1.3.0
 altair==4.2.2
 anyio==3.6.2
 argon2-cffi==21.3.0
@@ -14,19 +14,19 @@ beautifulsoup4==4.11.1
 bleach==5.0.1
 blinker==1.5
 
-brotlipy @ file:///D:/bld/brotlipy_1666764911856/work
+
 cachetools==5.2.0
 certifi==2022.12.7
-cffi @ file:///D:/bld/cffi_1671179504620/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1661170624537/work
-click @ file:///D:/bld/click_1666798499870/work
+
+
+
 click-plugins==1.1.1
-cligj @ file:///home/conda/feedstock_root/build_artifacts/cligj_1633637764473/work
-colorama @ file:///home/conda/feedstock_root/build_artifacts/colorama_1666700638685/work
+
+
 comm==0.1.1
-contourpy @ file:///D:/bld/contourpy_1667248121371/work
-cryptography @ file:///D:/bld/cryptography_1669592337584/work
-cycler @ file:///home/conda/feedstock_root/build_artifacts/cycler_1635519461629/work
+
+
+
 debugpy==1.6.4
 decorator==5.1.1
 defusedxml==0.7.1
@@ -35,12 +35,12 @@ executing==1.2.0
 fastjsonschema==2.16.2
 Fiona==1.8.22
 flatbuffers==22.12.6
-folium @ file:///home/conda/feedstock_root/build_artifacts/folium_1670956290671/work
-fonttools @ file:///D:/bld/fonttools_1666827191800/work
+
+
 fqdn==1.5.1
 gast==0.4.0
 GDAL==3.6.1
-geopandas @ file:///home/conda/feedstock_root/build_artifacts/geopandas_1670698600430/work
+
 gitdb==4.0.10
 GitPython==3.1.31
 google-auth==2.15.0
@@ -48,7 +48,7 @@ google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 grpcio==1.51.1
 h5py==3.7.0
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1663625384323/work
+
 importlib-metadata==5.1.0
 importlib-resources==5.10.1
 ipykernel==6.19.0
@@ -58,8 +58,8 @@ ipython-genutils==0.2.0
 ipywidgets==8.0.3
 isoduration==20.11.0
 jedi==0.18.2
-Jinja2 @ file:///home/conda/feedstock_root/build_artifacts/jinja2_1654302431367/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1663332044897/work
+
+
 jsonpointer==2.3
 jsonschema==4.17.3
 jupyter==1.0.0
@@ -72,13 +72,13 @@ jupyter_server_terminals==0.4.2
 jupyterlab-pygments==0.2.2
 jupyterlab-widgets==3.0.4
 keras==2.11.0
-kiwisolver @ file:///D:/bld/kiwisolver_1666805810106/work
+
 libclang==14.0.6
-mapclassify @ file:///home/conda/feedstock_root/build_artifacts/mapclassify_1627363180059/work
+
 Markdown==3.4.1
 markdown-it-py==2.2.0
-MarkupSafe @ file:///D:/bld/markupsafe_1666770340967/work
-matplotlib @ file:///D:/bld/matplotlib-suite_1667505124848/work
+
+
 matplotlib-inline==0.1.6
 mdurl==0.1.2
 mistune==2.0.4
@@ -89,14 +89,14 @@ nbclient==0.7.2
 nbconvert==7.2.6
 nbformat==5.7.0
 nest-asyncio==1.5.6
-networkx @ file:///home/conda/feedstock_root/build_artifacts/networkx_1667391556261/work
+
 notebook==6.5.2
 notebook_shim==0.2.2
-numpy @ file:///D:/bld/numpy_1668919236258/work
+
 oauthlib==3.2.2
 opt-einsum==3.3.0
-packaging @ file:///home/conda/feedstock_root/build_artifacts/packaging_1670530880680/work
-pandas @ file:///D:/bld/pandas_1669134777944/work
+
+
 pandocfilters==1.5.0
 parso==0.8.3
 pickleshare==0.7.5
@@ -112,19 +112,19 @@ py4j==0.10.9.5
 pyarrow==10.0.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1636257122734/work
+
 pydeck==0.8.0
 Pygments==2.14.0
 Pympler==1.0.1
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1665350324128/work
-pyparsing @ file:///home/conda/feedstock_root/build_artifacts/pyparsing_1652235407899/work
-pyproj @ file:///D:/bld/pyproj_1670929747138/work
+
+
+
 pyrsistent==0.19.2
-PySocks @ file:///D:/bld/pysocks_1661604991356/work
+
 pyspark==3.3.1
-python-dateutil @ file:///home/conda/feedstock_root/build_artifacts/python-dateutil_1626286286081/work
+
 python-json-logger==2.0.4
-pytz @ file:///home/conda/feedstock_root/build_artifacts/pytz_1667391478166/work
+
 pytz-deprecation-shim==0.1.0.post0
 pywin32==305
 pywinpty==2.0.9
@@ -132,20 +132,20 @@ PyYAML==6.0
 pyzmq==24.0.1
 qtconsole==5.4.0
 QtPy==2.3.0
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1661872987712/work
+
 requests-oauthlib==1.3.1
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rich==13.3.1
 rsa==4.9
-Rtree @ file:///D:/bld/rtree_1666813391535/work
-scikit-learn @ file:///D:/bld/scikit-learn_1670523714286/work
+
+
 scipy==1.9.3
 seaborn==0.12.1
 semver==2.13.0
 Send2Trash==1.8.0
-shapely @ file:///D:/bld/shapely_1670855328851/work
-six @ file:///home/conda/feedstock_root/build_artifacts/six_1620240208055/work
+
+
 smmap==5.0.0
 sniffio==1.3.0
 soupsieve==2.3.2.post1
@@ -160,7 +160,7 @@ tensorflow-intel==2.11.0
 tensorflow-io-gcs-filesystem==0.28.0
 termcolor==2.1.1
 terminado==0.17.1
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1643647933166/work
+
 tinycss2==1.2.1
 toml==0.10.2
 toolz==0.12.0
@@ -169,9 +169,9 @@ traitlets==5.6.0
 typing_extensions==4.4.0
 tzdata==2022.7
 tzlocal==4.2
-unicodedata2 @ file:///D:/bld/unicodedata2_1667240053339/work
+
 uri-template==1.2.0
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1669259737463/work
+
 validators==0.20.0
 watchdog==2.3.0
 wcwidth==0.2.5
@@ -180,8 +180,8 @@ webencodings==0.5.1
 websocket-client==1.4.2
 Werkzeug==2.2.2
 widgetsnbextension==4.0.4
-win-inet-pton @ file:///D:/bld/win_inet_pton_1667051142467/work
+
 wincertstore==0.2
 wrapt==1.14.1
-xyzservices @ file:///home/conda/feedstock_root/build_artifacts/xyzservices_1663619671984/work
+
 zipp==3.11.0
